--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-USER_NAME='root'
-PASWORD_DB='123456'
-HOST='localhost'
-SECRET_KEY='GhjkgF55j2lhl3ddSSsfahbf'
+USER_NAME=root
+PASWORD_DB=123456
+HOST=localhost
+SECRET_KEY=GhjkgF55j2lhl3ddSSsfahbf
